--- a/angular-three/src/app/pages/Admin/admin/admin.component.html
+++ b/angular-three/src/app/pages/Admin/admin/admin.component.html
@@ -41,16 +41,27 @@
 
             <div class="container col-md-4">
               <div class="container-lg selectionDiv" (click)="openModal('listPatientModal')">
-              <div class="form-floating mb-3">
+                <div class="form-floating mb-3">
                   <h3 class="title" >List Patient Profile</h3>
+                </div>
               </div>
             </div>
-          </div>
 
+            <div class="container col-md-4">
+              <div class="container-lg  selectionDiv" (click)="openModal('registerStaffModal')">
+                <div class="form-floating mb-3">
+                    <h3 class="title" >Register Staff Profile</h3>
+                </div>
+              </div>
+            </div>
 
-
-
-
+            <div class="container col-md-4">
+              <div class="container-lg selectionDiv" (click)="openModal('listStaffModal')">
+                <div class="form-floating mb-3">
+                  <h3 class="title" >List Staff Profile</h3>
+                </div>
+              </div>
+            </div>
 
         </div>
 </div>
@@ -274,7 +285,97 @@
 
   </div>
 </div>
+<div  [ngStyle]="{'display': isModalOpen('listStaffModal') ? 'block' : 'none'}" id="listStaffModal" class="modal" >
+  <div class="modal-content">
+      <span (click)="closeModal('listStaffModal')" class="close">&times;</span>
+      <div>
 
+      <form  class="row g-3 needs-validation" novalidate="">
+          <div class="col-md-2"></div>
+
+          <div class="col-md-6">
+            <div class="input-group">
+              <span class="input-group-text" id="basic-addon1"><i class="bi bi-search"></i></span>
+              <input type="text" class="form-control" id="validationCustom01"  name="searchTerm" placeHolder="Search" [(ngModel)]="searchTerm" (input)="onFilterChange()">
+            </div>
+          </div>
+          <div class="col-md-2">
+            <div class="input-group">
+              <span class="input-group-text" id="basic-addon1"><i class="bi bi-funnel-fill"></i></span>
+            <select class="form-select" id="validationCustom1" [(ngModel)]="filterField"  name="filterField" (change)="onFilterChange()" required>
+              <option selected="" disabled="" value="">Choose Filter</option>
+              <option>Name (WIP)</option>
+              <option>Id</option>
+              <option>Medical Record Number</option>
+              <option>Email</option>
+            </select>
+          </div>
+          </div>
+
+          <div class="col-md-12">
+            <div class="table-wrapper" >
+              <div class="table-title">
+              <form [formGroup]="staffForm" (ngSubmit)="onSubmitStaff()" class="row g-3 needs-validation" novalidate="">
+              <table class="table table-striped table-hover" >
+                <thead>
+                  <tr>
+                    <tr>
+                      <th>#</th>
+                      <th>ID</th>
+                      <th>Staff ID</th>
+                      <th>First Name</th>
+                      <th>Middle Name</th>
+                      <th>Last Name</th>
+                      <th>License Number</th>
+                      <th>Role</th>
+                      <th>Specialization</th>
+                      <th>Email</th>
+                      <th>Phone</th>
+                      <th>Active</th>
+                    </tr>
+                  </thead>
+                  <tbody>
+                    <tr *ngFor="let request of staffsProfiles; let i = index" (click)="selectStaff(request.staffId)" [ngClass]="{ 'selected-row': selectedStaffId === request.staffId }">
+                      <td>{{ i + 1 }}</td>
+                      <td><input type="radio" id="staff_{{ request.staffId }}" name="staffFormID" value="{{ request.staffId }}" [checked]="selectedStaffId === request.staffId" hidden>{{ request.id }}</td>
+                      <td>{{ request.staffId }}</td>
+                      <td>{{ request.name.firstName }}</td>
+                      <td>{{ request.name.middleNames }}</td>
+                      <td>{{ request.name.lastName }}</td>
+                      <td>{{ request.licenseNumber }}</td>
+                      <td>{{ request.role }}</td>
+                      <td>{{ request.specialization }}</td>
+                      <td>{{ request.email.fullEmail }}</td>
+                      <td>{{ request.phoneNumber.number }}</td>
+                      <td>{{ request.active }}</td>
+                  </tr>
+                </tbody>
+              </table>
+            </form>
+            </div>
+          </div>
+        </div>
+
+          <div class="col-md-9"></div>
+          <div class="col-md-3">
+            <button class="fs-5 btn btn-outline-info">View <i class="bi bi-info-square-fill"></i></button>
+            <button class="fs-5 btn btn-outline-warning">Edit <i class="bi bi-pencil-square"></i></button>
+            <button class="fs-5 btn btn-outline-danger" (click)="deactivateStaff()">Deactivate <i class="bi bi-archive-fill"></i></button>
+          </div>
+
+
+
+
+
+
+          <!--<div class="col-12">
+            <button class="btn btn-primary" type="submit">Submit form</button>
+          </div>-->
+        </form>
+      </div>
+
+  </div>
+</div>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 
