--- a/angular-three/src/app/pages/Patient/patient/patient.component.html
+++ b/angular-three/src/app/pages/Patient/patient/patient.component.html
@@ -50,85 +50,152 @@
       <span (click)="closeModal('UpdatePatientModal')" class="close">&times;</span>
       <div>
 
-        <form [formGroup]="myForm" (ngSubmit)="onUpdatePatient()" class="row g-3 needs-validation" novalidate="">
-          <div class="col-md-4">
-            <label for="validationCustom01" class="form-label">Name</label>
-            <input type="text" class="form-control" id="validationCustom01" placeholder="Name" formControlName="name" required="">
-            <div class="valid-feedback">
-              Looks good!
-            </div>
-          </div>
-
-
-
-          <div class="col-md-4">
-            <label for="validationCustomUsername" class="form-label">User Email</label>
-            <div class="input-group has-validation">
-              <span class="input-group-text" id="inputGroupPrepend">&#64;</span>
-              <input type="text" class="form-control" id="validationCustomUserEmail" aria-describedby="inputGroupPrepend" formControlName="userEmail" required="">
-              <div class="invalid-feedback">
-                Please choose a userEmail.
+        <form [formGroup]="patientUpdateForm" (ngSubmit)="onUpdatePatient()" class="row g-3 needs-validation" novalidate="">
+          <div *ngIf="patientProfileSingle">
+            <div  class="row g-3 needs-validation">
+            <div class="col-md-12"></div>
+              <div class="col-md-3">
+                <div class="input-group has-validation">
+                  <span class="input-group-text" id="basic-addon1"><i class="bi bi-person-badge-fill"></i></span>
+                  <input type="text" class="form-control" value="{{ patientProfileSingle.name.firstName }} {{patientProfileSingle.name.middleNames}} {{patientProfileSingle.name.lastName}}">
+                </div>
               </div>
-            </div>
-          </div>
-
-          <div class="col-md-4">
-            <label for="validationCustomUsername" class="form-label">Email</label>
-            <div class="input-group has-validation">
-              <span class="input-group-text" id="inputGroupPrepend">&#64;</span>
-              <input type="email" class="form-control" id="validationCustomEmail" aria-describedby="inputGroupPrepend" formControlName="email" required="">
-              <div class="invalid-feedback">
-                Please choose a valid email.
+              <div class="col-md-3">
+                <div class="input-group has-validation">
+                  <span class="input-group-text" id="inputGroupPrepend">&#64;</span>
+                  <input type="text" class="form-control"aria-describedby="inputGroupPrepend"  value="{{ patientProfileSingle.email.fullEmail }}">
+                </div>
               </div>
-            </div>
-          </div>
-
-          <div class="col-md-4">
-            <label for="validationCustom02" class="form-label">Phone</label>
-            <input type="number" class="form-control" id="validationCustom02" formControlName="phone" min="0" max="999999999" required="">
-            <div class="valid-feedback">
-              Looks good!
-            </div>
-          </div>
-
-          <div class="col-md-6">
-            <label for="appointmentHistory" class="form-label">Appointment History</label>
-            <div class="dates-input">
-              <ul id="dates">
-                <li *ngFor="let date of appointmentHistory; let i = index" class="date">
-                  {{ date }}
-                  <button class="delete-button" (click)="removeDate(i)">X</button>
-                </li>
-              </ul>
-              <input type="date" id="input-date" (change)="addDate($event)" placeholder="Add appointment date" />
-            </div>
-          </div>
-
-          <h5 style="margin-top:1cm" class="form-label">Emergency Contact</h5>
-
-            <div class="col-md-4">
-              <label for="emergencyContactName" class="form-label">Name</label>
-              <input type="text" class="form-control" id="emergencyContactName" formControlName="emergencyContactName" required="">
-              <div class="valid-feedback">
-                Looks good!
+    
+    
+              <div class="col-md-3">
+                <div class="input-group has-validation">
+                  <span class="input-group-text" id="basic-addon1"><i class="bi bi-telephone-fill"></i></span>
+                  <input type="text" class="form-control"  value="{{ patientProfileSingle.phone.number }}" >
+                </div>
               </div>
+    
+    
+    
+              <div class="col-md-3">
+                <div class="input-group has-validation">
+                  <span class="input-group-text" id="basic-addon1"><i class="bi bi-person-vcard-fill"></i></span>
+                  <input type="text" class="form-control" value="{{ patientProfileSingle.userEmail.fullEmail }}" >
+                </div>
+              </div>
+    
+              <div class="col-md-4">
+                <div class="input-group has-validation">
+                  <span class="input-group-text" id="basic-addon1"><i class="bi bi-calendar-date"></i></span>
+                  <input type="date" class="form-control" [value]="formatDateToISO(patientProfileSingle.dateOfBirth)"   >
+                </div>
+              </div>
+    
+              <div class="col-md-4">
+                <div class="input-group has-validation">
+                  <span class="input-group-text" id="basic-addon1"><i class="bi bi-gender-ambiguous"></i></span>
+                  <input type="text" class="form-control" value="{{ patientProfileSingle.gender }}" >
+                </div>
+              </div>
+    
+    
+    
+              <div class="col-md-4">
+                <div class="input-group has-validation">
+                  <span class="input-group-text" id="basic-addon1"><i class="bi bi-heart-pulse"></i></span>
+                  <input type="text" class="form-control" value="{{ patientProfileSingle.medicalRecordNumber.number }}" >
+                </div>
+              </div>
+    
+              <hr>
+    
+    
+    
+              <h5 class="form-label">Emergency Contact</h5>
+    
+    
+    
+              <div class="col-md-4">
+                <div class="input-group has-validation">
+                  <span class="input-group-text" id="basic-addon1"><i class="bi bi-person-badge"></i></span>
+                  <input type="text" class="form-control" value="{{ patientProfileSingle.nameEmergency }}" >
+                </div>
+              </div>
+    
+              <div class="col-md-4">
+                <div class="input-group has-validation">
+                  <span class="input-group-text" id="basic-addon1"><i class="bi bi-gender-ambiguous"></i></span>
+                  <input type="text" class="form-control" value="{{ patientProfileSingle.emailEmergency.fullEmail }}" >
+                </div>
+              </div>
+    
+    
+    
+              <div class="col-md-4">
+                <div class="input-group has-validation">
+                  <span class="input-group-text" id="basic-addon1"><i class="bi bi-heart-pulse"></i></span>
+                  <input type="text" class="form-control" value="{{ patientProfileSingle.phoneEmergency.number }}" >
+                </div>
+              </div>
+    
+    
+    
+    
+    
+              <div class="col-md-12"></div>
+              <hr>
+              <div class="col-md-1"></div>
+              <div class="col-md-5">
+                <div class="input-group has-validation">
+                  <span class="input-group-text" id="basic-addon1"><i class="bi bi-clock-fill"></i></span>
+                  <span class="input-group-text" id="add">Appointment History</span>
+                </div>
+                <table class="table table-striped table-hover table-over" style="scrollbar-width: none;">
+                  <thead>
+                    <tr>
+                      <tr>
+                        <th>#</th>
+                        <th>Date</th>
+                      </tr>
+                    </thead>
+                    <tbody>
+                      <tr *ngFor="let request of patientProfileSingle.appointmentHistory; let i = index">
+                        <td>{{ i + 1 }}</td>
+                        <td>{{ request }}</td>
+                    </tr>
+                  </tbody>
+                </table>
+              </div>
+    
+              <div class="col-md-5">
+                <div class="input-group has-validation">
+                  <span class="input-group-text" id="basic-addon1"><i class="bi bi-virus"></i></span>
+                  <span class="input-group-text" id="add">Allergies</span>
+                </div>
+                <table class="table table-striped table-hover table-over" style="scrollbar-width: none;">
+                  <thead>
+                    <tr>
+                      <tr>
+                        <th>#</th>
+                        <th>Name</th>
+                      </tr>
+                    </thead>
+                    <tbody>
+                      <tr *ngFor="let request of patientProfileSingle.allergies; let i = index">
+                        <td>{{ i + 1 }}</td>
+                        <td>{{ request }}</td>
+                    </tr>
+                  </tbody>
+                </table>
+              </div>
+    
+    
+              <div class="col-md-2"></div>
+            </div>
             </div>
 
-            <div class="col-md-4">
-              <label for="emergencyContactEmail" class="form-label">Email</label>
-              <input type="email" class="form-control" id="emergencyContactEmail" formControlName="emergencyContactEmail" required="">
-              <div class="invalid-feedback">
-                Please choose a valid email.
-              </div>
-            </div>
 
-            <div class="col-md-4">
-              <label for="emergencyContactPhone" class="form-label">Phone</label>
-              <input type="number" class="form-control" id="emergencyContactPhone" formControlName="emergencyContactPhone" min="0" max="999999999" required="">
-              <div class="valid-feedback">
-                Looks good!
-              </div>
-            </div>
+          
 
 
           <div class="col-12">
@@ -144,7 +211,7 @@
           </div>
 
           <div class="col-12">
-            <button class="btn btn-primary" type="submit" [disabled]="myForm.invalid">Submit form</button>
+            <button class="btn btn-primary" type="submit" >Submit form</button>
           </div>
         </form>
       </div>
@@ -157,13 +224,13 @@
     
       <span (click)="closeModal('viewPatientModal')" class="close">&times;</span>
       <form [formGroup]="myForm" (ngSubmit)="viewPatient()" class="row g-3 needs-validation" novalidate="">
-      
+        <div *ngIf="patientProfileSingle">
         <div  class="row g-3 needs-validation">
         <div class="col-md-12"></div>
           <div class="col-md-3">
             <div class="input-group has-validation">
               <span class="input-group-text" id="basic-addon1"><i class="bi bi-person-badge-fill"></i></span>
-              <input type="text" class="form-control" disabled="" value="{{ patientProfileSingle.name.firstName }} {{ patientProfileSingle.name.middleNames }} {{ patientProfileSingle.name.lastName }}">
+              <input type="text" class="form-control" disabled="" value="{{ patientProfileSingle.name.firstName }} {{patientProfileSingle.name.middleNames}} {{patientProfileSingle.name.lastName}}">
             </div>
           </div>
           <div class="col-md-3">
@@ -297,7 +364,7 @@
 
 
           <div class="col-md-2"></div>
-
+        </div>
         </div>
       
     </form>
