--- a/angular-three/src/app/pages/Patient/patient/patient.component.scss
+++ b/angular-three/src/app/pages/Patient/patient/patient.component.scss
@@ -2,19 +2,21 @@
 body {
   margin: 0;
   padding: 0;
-  height: 100vh;
   background: linear-gradient(135deg, #f0f8ff, #87cefa);
-  background-size: cover;
+  background-size:cover;
   font-family: Arial, sans-serif;
   justify-content: center;
   align-items: center;
+  //height: 100vh; //TODO: TROCAR TIRAR ISTO PARA APARECER TUDO, ESTA TEMPORARIAMENTE
+
+  //background-attachment: scroll!important;
 }
 
 .container-lg {
   display:inline-flexbox;
   justify-content: center;
   align-items: center;
-  height: 300px;
+  height: 32vh;
   background-color: #f0f8ff;
   border: 2px solid #0e79a3;
   border-radius: 15px;
@@ -48,9 +50,10 @@ body {
   justify-content: center;
   align-items: center;
   text-align: center;
-  opacity: 80%;
+  opacity: 60%;
   background: rgb(185,243,252);
   background: linear-gradient(180deg, rgba(185,243,252,1) 0%, rgba(147,198,231,1) 45%, rgba(120,157,188,1) 87%);
+  z-index: 0!important;
 }
 
 .selectionDiv .title{
@@ -62,6 +65,7 @@ body {
   transform: scale(1.2);
   transition: transform 0.5s, background-color 0.5s;
   opacity: 100%;
+  z-index: 999!important;
 
 }
 
@@ -198,4 +202,173 @@ cursor: pointer;
       text-shadow: 0 0 5px #eeeeee, 0 0 10px #0B135B, 0 0 15px #0B135B, 0 0 20px #0B135B,
                    0 0 20px #0B135B, 0 0 30px #0B135B, 0 0 40px #0B135B;
     }
+}
+
+
+
+.table-wrapper {
+  background: #fff;
+  padding: 20px 30px 5px;
+  margin: 30px auto;
+  box-shadow: 0 0 10px 0 rgba(0,0,0,.25);
+  //border: 1px solid #5a5a5a;
+  //overflow-x:scroll;
+}
+.table-title .btn-group {
+  float: right;
+}
+.table-title .btn {
+  min-width: 50px;
+  border-radius: 2px;
+  border: none;
+  padding: 6px 12px;
+  font-size: 95%;
+  outline: none !important;
+  height: 30px;
+}
+
+.table-title {
+  border-bottom: 1px solid #e9e9e9;
+  padding-bottom: 15px;
+  margin-bottom: 5px;
+  margin: -20px -31px 10px;
+  padding: 15px 30px;
+  color: #fff;
+}
+.table-title h2 {
+  margin: 2px 0 0;
+  font-size: 24px;
+}
+table.table tr th, table.table tr td {
+  border-color: #e9e9e9;
+  padding: 12px 15px;
+  vertical-align: middle;
+}
+
+table.table-striped tbody tr:nth-of-type(odd) {
+  background-color: #fcfcfc;
+}
+table.table-striped.table-hover tbody tr:hover {
+  background: #f5f5f5;
+}
+table.table td a {
+  color: #2196f3;
+}
+table.table td .btn.manage {
+  padding: 2px 10px;
+  background: #37BC9B;
+  color: #fff;
+  border-radius: 2px;
+}
+table.table td .btn.manage:hover {
+  background: #2e9c81;
+}
+
+
+.selected-row {
+  position: relative;
+  z-index: 3;
+  box-shadow: 0 0 0 .325rem rgba(9,67,121,0.5);
+
+
+}
+
+.table-over{
+  display: block; 
+  height: 50vh; 
+  overflow-y: scroll;
+}
+
+
+
+.dates-input {
+  margin-top: 10px;
+}
+
+.dates-input ul#dates, .dates-input ul#dates2 {
+  list-style-type: none;
+  padding: 0;
+  margin: 10px 0;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 5px;
+}
+
+.dates-input ul#dates li.date, .dates-input ul#dates2 li.date {
+  background-color: #e0f7fa;
+  color: #00796b;
+  border-radius: 5px;
+  padding: 5px 10px;
+  display: flex;
+  align-items: center;
+  font-size: 0.9rem;
+  font-weight: 500;
+}
+
+.dates-input ul#dates li.date .delete-button, .dates-input ul#dates2 li.date .delete-button {
+  background: none;
+  border: none;
+  color: #f44336;
+  font-size: 1rem;
+  font-weight: bold;
+  margin-left: 8px;
+  cursor: pointer;
+}
+
+.dates-input ul#dates li.date .delete-button:hover, .dates-input ul#dates2 li.date .delete-button:hover {
+  color: #d32f2f;
+}
+
+.dates-input input[type="date"] {
+  width: 100%;
+  padding: 8px;
+  border: 1px solid #ced4da;
+  border-radius: 4px;
+  font-size: 0.9rem;
+  color: #495057;
+}
+
+.dates-input input[type="date"]::placeholder {
+  color: #6c757d;
+}
+
+.dates-input input[type="date"]:focus {
+  border-color: #80bdff;
+  outline: 0;
+  box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.25);
+}
+
+
+
+
+
+.tooltip {
+  position: relative;
+  display: inline-block;
+  border-bottom: 1px dotted black;
+}
+
+.tooltip .tooltiptext {
+  visibility: hidden;
+  width: 120px;
+  background-color: black;
+  color: #fff;
+  text-align: center;
+  border-radius: 6px;
+  padding: 5px 0;
+
+  /* Position the tooltip */
+  position: absolute;
+  z-index: 1;
+}
+
+.tooltip .tooltiptext {
+  width: 120px;
+  bottom: 100%;
+  left: 50%;
+  margin-left: -60px; /* Use half of the width (120/2 = 60), to center the tooltip */
+}
+
+.tooltip:hover .tooltiptext {
+  visibility: visible;
 }
